--- a/package.json
+++ b/package.json
@@ -18,9 +18,18 @@
   "homepage": "https://github.com/mikedfunk/karma-example",
   "devDependencies": {
     "browserify": "^8.1.1",
-    "browserify-shim": "^3.8.2"
+    "browserify-shim": "^3.8.2",
+    "jasmine-core": "^2.1.3",
+    "karma": "^0.12.31",
+    "karma-browserify": "^2.0.0",
+    "karma-jasmine": "^0.3.4",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "phantomjs": "^1.9.13"
+  },
+  "browser": {
+    "add": "./assets/js/functions.js"
   },
   "browserify-shim": {
-    "add": "global:Add"
+    "./assets/js/functions.js": "add"
   }
 }
